crushed flexible left col issue

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="side-col">
 
             <div class="class-list-container">
-                <div class="class-list-item">
+                <div class="class-list-item" data-classid="1">
                     <div class="class-list-item-colorcode color1"> </div>
                     <div class="class-list-item-text">User Centered Research</div>
                     <ul class="class-sublist">
@@ -36,7 +36,7 @@
                         <li>hi</li>
                     </ul>
                 </div>
-                <div class="class-list-item">
+                <div class="class-list-item" data-classid="2">
                     <div class="class-list-item-colorcode color2"> </div>
                     <div class="class-list-item-text">Cognitive Modelling</div>
                     <ul class="class-sublist">
@@ -46,9 +46,9 @@
                         <li>hi</li>
                     </ul>
                 </div>
-                <div class="class-list-item">
+                <div class="class-list-item" data-classid="3">
                     <div class="class-list-item-colorcode color3"> </div>
-                    <div class="class-list-item-text">Evolution & History of Life</div>
+                    <div class="class-list-item-text">Evolution &amp; History of Life</div>
                     <ul class="class-sublist">
                         <li>hi</li>
                         <li>hi</li>
@@ -56,7 +56,7 @@
                         <li>hi</li>
                     </ul>
                 </div>
-                <div class="class-list-item">
+                <div class="class-list-item" data-classid="4">
                     <div class="class-list-item-colorcode color4"> </div>
                     <div class="class-list-item-text">Entrepreneurship for CS</div>
                     <ul class="class-sublist">
@@ -66,7 +66,7 @@
                         <li>hi</li>
                     </ul>
                 </div>
-                <div class="class-list-item">
+                <div class="class-list-item" data-classid="5">
                     <div class="class-list-item-colorcode color5"> </div>
                     <div class="class-list-item-text">Interpretation and Argument</div>
                     <ul class="class-sublist">
@@ -159,9 +159,9 @@
                     <div class="cal-cell"><div class="cal-cell-number">13</div></div>
                     <div class="cal-cell"> <div class="cal-cell-number">14</div>
                         <div class="cal-event color1"><span class="cal-event-time">5p</span>Office Hours</div>
-                        <div class="cal-event color1"><span class="cal-event-time">5p</span>Office Hours</div>
-                        <div class="cal-event color1"><span class="cal-event-time">5p</span>Office Hours</div>
-                        <div class="cal-event color1"><span class="cal-event-time">5p</span>Office Hours</div>
+                        <div class="cal-event color2"><span class="cal-event-time">5p</span>Office Hours</div>
+                        <div class="cal-event color3"><span class="cal-event-time">5p</span>Office Hours</div>
+                        <div class="cal-event color4"><span class="cal-event-time">5p</span>Office Hours</div>
                     </div>
                     <div class="cal-cell"><div class="cal-cell-number">15</div></div>
                     <div class="cal-cell"><div class="cal-cell-number">16</div></div>
