started backbone work, need to commit to switch to master

--- a/source/index.html
+++ b/source/index.html
@@ -19,11 +19,12 @@
 
   </head>
   <body>
-    <script src="scripts/main.js"></script>
+
+    <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
 
     <div class="app-wrapper">
 
-        <div class="side-col">
+        <div id="side-col">
 
             <div class="class-list-container">
                 <div class="class-list-item" data-classid="1">
@@ -138,7 +139,7 @@
 
         </div> <!-- end side-col -->
 
-        <div class="main-col">
+        <div id="main-col">
             <div class="toolbar"></div>
             <div class="content">
                 <div class="page calendar">
