commit before switching branches

--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,6 @@
       <!-- Mobile viewport optimized: h5bp.com/viewport -->
       <meta name="viewport" content="width=device-width">
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-
       <link rel="stylesheet" href="css/main.css">
 
   </head>
@@ -26,116 +24,9 @@
 
         <div id="side-col">
 
-            <div class="class-list-container">
-                <div class="class-list-item" data-classid="1">
-                    <div class="class-list-item-colorcode color1"> </div>
-                    <div class="class-list-item-text">User Centered Research</div>
-                    <ul class="class-sublist">
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                    </ul>
-                </div>
-                <div class="class-list-item" data-classid="2">
-                    <div class="class-list-item-colorcode color2"> </div>
-                    <div class="class-list-item-text">Cognitive Modelling</div>
-                    <ul class="class-sublist">
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                    </ul>
-                </div>
-                <div class="class-list-item" data-classid="3">
-                    <div class="class-list-item-colorcode color3"> </div>
-                    <div class="class-list-item-text">Evolution &amp; History of Life</div>
-                    <ul class="class-sublist">
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                    </ul>
-                </div>
-                <div class="class-list-item" data-classid="4">
-                    <div class="class-list-item-colorcode color4"> </div>
-                    <div class="class-list-item-text">Entrepreneurship for CS</div>
-                    <ul class="class-sublist">
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                    </ul>
-                </div>
-                <div class="class-list-item" data-classid="5">
-                    <div class="class-list-item-colorcode color5"> </div>
-                    <div class="class-list-item-text">Interpretation and Argument</div>
-                    <ul class="class-sublist">
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                        <li>hi</li>
-                    </ul>
-                </div>
-            </div>
+            <div class="class-list-container"></div>
 
-            <div class="task-list-container">
-
-                <div class="task-list-item">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">Assignment #4</div>
-                        <div class="task-list-item-subtext">Wed 10/17, 11am</div>
-                    </div>
-                    <div class="task-list-item-tag color1">UCRE</div>
-                </div>
-
-                <div class="task-list-item">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">SS HW #3</div>
-                        <div class="task-list-item-subtext">Thu 10/18 in class</div>
-                    </div>
-                    <div class="task-list-item-tag color4">Entrep.</div>
-                </div>
-
-                <div class="task-list-item">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">Read Ch. 11, 12</div>
-                        <div class="task-list-item-subtext">Thu 10/18</div>
-                    </div>
-                    <div class="task-list-item-tag color3">Evolut.</div>
-                </div>
-
-                <div class="task-list-item">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">SS HW #3</div>
-                        <div class="task-list-item-subtext">Thu 10/18 in class</div>
-                    </div>
-                    <div class="task-list-item-tag color2">Entrep.</div>
-                </div>
-
-                <div class="task-list-item">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">SS HW #3</div>
-                        <div class="task-list-item-subtext">Thu 10/18 in class</div>
-                    </div>
-                    <div class="task-list-item-tag color2">Entrep.</div>
-                </div>
-
-                <div class="task-list-item completed">
-                    <div class="task-list-item-box"> </div>
-                    <div class="task-list-item-text">
-                        <div class="task-list-item-name">SS HW #3</div>
-                        <div class="task-list-item-subtext">Thu 10/18 in class</div>
-                    </div>
-                    <div class="task-list-item-tag color2">Entrep.</div>
-                </div>
-
-            </div>
+            <div class="task-list-container"></div>
 
         </div> <!-- end side-col -->
 
