--- a/source/index.html
+++ b/source/index.html
@@ -1,41 +1,42 @@
 <html>
 <!DOCTYPE html>
   <head>
-      <meta charset="utf-8">
+      <meta charset='utf-8'>
 
       <!-- Use the .htaccess and remove these lines to avoid edge case issues.
            More info: h5bp.com/i/378 -->
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 
       <title>Blackboard Redesign Prototype</title>
-      <meta name="description" content="">
+      <meta name='description' content=''>
 
       <!-- Mobile viewport optimized: h5bp.com/viewport -->
-      <meta name="viewport" content="width=device-width">
+      <meta name='viewport' content='width=device-width'>
 
-      <link rel="stylesheet" href="css/main.css">
+      <link rel='stylesheet' href='css/main.css'>
 
   </head>
   <body>
 
-    <script data-main="scripts/main" src="scripts/libs/require/require.js"></script>
+    <script data-main='scripts/main' src='scripts/libs/require/require.js'></script>
 
-    <div class="app-wrapper">
+    <div class='app-wrapper'>
 
-        <div id="side-col">
+        <div class='toolbar'> </div>
 
-            <div class="class-list-container"></div>
 
-            <div class="task-list-container"></div>
-
+        <div id='side-col'>
+            <div class='class-list list'></div>
+            <div class='task-list list'></div>
         </div> <!-- end side-col -->
 
-        <div class="toolbar"></div>
-        <div id="main-col">
-            <div class="content">
+
+        <div id='main-col'>
+            <div class='content'>
             </div>
         </div>
 
     </div>
+
   </body>
 </html>
